slight mod to try to fix a tags not working on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@
 
 #logo {
     width: 80px;
+    margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
 }
